[package]
name = "monetdb"
version = "0.2.1"
description = "Client library for MonetDB, a high performance SQL database for analytics"
authors = [ "Joeri van Ruth <joeri.van.ruth@monetdbsolutions.com>" ]
keywords = [ "monetdb", "database", "sql" ]
categories = [ "database" ]
license = "MPL-2.0"

edition = "2024"

readme = "README.md"
homepage = "https://github.com/MonetDB/monetdb-rust"
repository = "https://github.com/MonetDB/monetdb-rust"

[lib]
# doctest = false

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
undocumented_unsafe_blocks = "warn"


[profile.release]
# needed for 'cargo flamegraph'
#debug = true

[[test]]
name = "ci"
path = "tests/ci/mod.rs"
harness = true


[features]
default = [ "uuid" ]   # doesn't yet include "rustls"
rustls = [ "dep:rustls", "dep:rustls-platform-verifier" ]
uuid = [ "dep:uuid" ]
rust_decimal = [ "dep:rust_decimal" ]
decimal-rs = [ "dep:decimal-rs" ]


[dependencies]
array-macro = "2.1.8"
atoi = "2.0.0"
bstr = "1.10.0"
decimal-rs = { version="0.1.43", optional = true }
digest = "0.10.7"
gethostname = "0.5.0"
hex = "0.4.3"
log = "0.4.22"
memchr = "2.7.4"
num = "0.4.3"
ripemd = "0.1.3"
rust_decimal = { version="1.36.0", features = [ "std" ], optional = true }
rustls = { version="0.23.13", optional = true }
rustls-platform-verifier = { version="0.7.0", optional = true }
sha2 = "0.10.8"
thiserror = "1.0.64"
time = { version="0.3.36", features = [ "std", "local-offset" ], optional = true }
url = "2.5.2"
uuid = { version="1.10.0", optional = true }

[dev-dependencies]
anyhow = "1.0.89"
bstr = "1.10.0"
claims = "0.7.1"
itertools = "0.13.0"
simplelog = "0.12.2"
